tests/error/very_negative_bitfield.c
// fail "Bitfield width must be non-negative."

typedef struct struct_0 {
long long ident_0 : -6598051613625061302;
}type_0;

